Finished ServiceNodeWsClient & a number of other edits.
Changed the java version code in Core/pom.xml.
Added ServiceException, ServiceNodeMetrics, ServiceNode\...\DockerController, MigrationManager, ServiceController, ServiceNode.
ServiceNodeWsClient: removed unnecessary code and adding ServiceNode.label to logging messages.
PingTask: removed unused code.
NodeInfo: fixed spelling of trustworthy, chose better constructor parameters.
TransferClient: removed unnecessary onMessage code: now just logs an error.
ServiceNode/Main: has a latencyDelay parameter.
LatencyRequestMonitor: removed cloneLatencies and replaced with a single call to Map.copyOf.

Signed-off-by: Joseph Dempsey <joseph.dempsey@ucdconnect.ie>

Former-commit-id: 9b67fc4aa48a6e00e27b1a03b958df8c2e689b71